--- a/todo/templates/todo/list.html
+++ b/todo/templates/todo/list.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="container my-5">
+    <div class="container my-5" id="app">
         <div class="row">
             <div class="col-lg-6 shadow p-4 mx-auto">
                 <h3 class="d-inline-block"> todo app</h3>
@@ -34,11 +34,11 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
+                        <tr v-for="(todo in todo_list)">
 
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
+                            <td>${todo.title}</td>
+                            <td>${todo.notes}</td>
+                            <td>${todo.done}</td>
                         </tr>
 
                     </tbody>
@@ -80,8 +80,29 @@
             </div>
         </div>
     </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+    </script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios-vue3@1.0.0/cjs/index.min.js"></script>  
+    <script type="text/javascript">
+        var app = new Vue({
+            el:'#app',
+            delimiters:['${','}'],
+            data:{
+                todo_list : [],
+            },
+            mounted() {
+                this.get_todo():
+            },
+            methods: {
+                get_todo:function(){
+
+                },
+
+            },
+        })
     </script>
 </body>
 
