add list todo with vue js

--- a/todo/templates/todo/list.html
+++ b/todo/templates/todo/list.html
@@ -34,7 +34,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr v-for="(todo in todo_list)">
+                        <tr v-for="todo in todo_list">
 
                             <td>${todo.title}</td>
                             <td>${todo.notes}</td>
@@ -81,12 +81,14 @@
         </div>
     </div>
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-    </script>
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios-vue3@1.0.0/cjs/index.min.js"></script>  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.3/axios.min.js" integrity="sha512-0qU9M9jfqPw6FKkPafM3gy2CBAvUWnYVOfNPDYKVuRTel1PrciTj+a9P3loJB+j0QmN2Y0JYQmkBBS8W+mbezg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="text/javascript">
+        axios.defaults.xsrfCookieName = 'csrftoken'
+        axios.defaults.xsrfHeaderName = "X-CSRFTOKEN"
+
+
         var app = new Vue({
             el:'#app',
             delimiters:['${','}'],
@@ -94,11 +96,14 @@
                 todo_list : [],
             },
             mounted() {
-                this.get_todo():
+                this.get_todo();
             },
             methods: {
                 get_todo:function(){
-
+                    axios.get('/todo/api/').then((response)=>{
+                        this.todo_list = response.data
+                    })
+                                     
                 },
 
             },
