--- a/todo/templates/todo/list.html
+++ b/todo/templates/todo/list.html
@@ -123,6 +123,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
     </script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.0/axios.min.js" integrity="sha512-WrdC3CE9vf1nBf58JHepuWT4x24uTacky9fuzw2g/3L9JkihgwZ6Cfv+JGTtNyosOhEmttMtEZ6H3qJWfI7gIQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="text/javascript">
@@ -138,7 +139,8 @@
                   notes:null,
                   done:null
                 },
-                current_todo:{}
+                current_todo:{},
+                
             },
             mounted() {
                 this.get_todo();
@@ -152,6 +154,7 @@
                 addTodo:function(){
                   axios.post('/todo/api/',this.new_todo)
                   .then((response)=>{
+                    $('#exampleModal').modal('hide');
                     this.get_todo()
                   })
                 },
@@ -173,6 +176,8 @@
                 ubdateTodo:function(){
                   axios.put(`/todo/api/${this.current_todo.id}/` , this.current_todo)
                   .then((response)=>{
+                    $('#EditModal').modal('hide');
+                    this.current_todo = {}
                     this.get_todo();
                 })
 
